kubernetes/ceph/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    # app-ingress: ""
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    openshift.io/cluster-monitoring: "true"
    kubernetes.io/metadata.name: rook-ceph
    app.kubernetes.io/instance: ceph
    ca-bundle: "true"
  name: rook-ceph
