kubernetes/ceph/base/ingress.yaml
# https://rook.io/docs/rook/latest-release/Storage-Configuration/Monitoring/ceph-dashboard/#ingress-controller
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ceph
  namespace: rook-ceph
  annotations:
    route.openshift.io/termination: passthrough
    # route.openshift.io/termination: reencrypt
    # route.openshift.io/destination-ca-certificate-secret: ca-bundle
spec:
  ingressClassName: openshift-default
  rules:
    - host: ceph.apps.okd.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: https-dashboard
  # tls:
  #   - hosts:
  #       - ceph.apps.okd.arthurvardevanyan.com
  #     secretName: rook-ceph-cert
